--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -34,7 +34,7 @@
 /* change the right sidebar background color to different it from the content,
 add a right border line */
 .md-sidebar--primary {
-    background-color: rgb(164, 167, 164);/* rgb(247, 250, 248); */
+    background-color: rgb(247, 250, 248);
     border-right: 1px solid rgb(230, 230, 230);
     padding-top: 3em;
 }
